# Package to isolate unsafe APIs used for the Str0m Windows Cryptography feature.

[package]
name = "str0m-applecrypto"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["webrtc", "streaming", "video", "audio", "media"]
categories = ["web-programming", "multimedia", "network-programming"]
repository = "https://github.com/algesten/str0m"
readme = "README.md"
description = "Supporting crate for str0m"

[dependencies]
tracing = "0.1.37"
core-foundation = "0.10"
security-framework = "3.5"
dispatch2 = "0.3"
block2 = "0.6"
