[package]
name = "str0m-crypto-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false  # This crate is only for testing, never published
description = "Integration tests for str0m crypto providers across platforms"

[dependencies]
# str0m with internal test exports enabled
str0m = { path = "..", default-features = false, features = ["_internal_test_exports"] }

# Apple platforms (macOS, iOS, etc.)
[target.'cfg(target_vendor = "apple")'.dependencies]
str0m-apple-crypto = { path = "../apple_crypto" }

# TODO: Windows
# [target.'cfg(windows)'.dependencies]
# str0m-wincrypto = { path = "../wincrypto" }

# TODO: OpenSSL fallback for Linux/other
# [target.'cfg(all(not(target_vendor = "apple"), not(windows)))'.dependencies]
# Use str0m with openssl feature

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
