[package]
name = "net"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
thiserror = "1"
rand = "0.8"
# STUN
hmac = "0.12"
crc = "3"

# asm feature breaks on windows, but it is much faster than openssl
[target.'cfg(unix)'.dependencies]
sha-1 = { version = "0.10", features = ["asm"] }

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "^0.9"
