[package]
name = "str0m-netem"
version = "0.2.0"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "Sans-IO network emulation for testing str0m under simulated network conditions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/str0m"
readme = "README.md"
edition = "2024"

# MSRV
rust-version = "1.85.0"

[dependencies]
fastrand = "2"
str0m-proto = { version = "0.2.0", path = "../proto" }
