[package]
name = "str0m-proto"
version = "0.1.2"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "Internal crate for str0m. Not intended for direct use."
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/str0m"
readme = "README.md"
edition = "2024"

# MSRV
rust-version = "1.85.0"

[features]
default = []
openssl = ["dep:openssl"]

# When we are running in test mode
_internal_test_exports = []

[dependencies]
# DTLS made for str0m (required dependency for types and traits)
dimpl = { version = "0.4.3", default-features = false }

time = "0.3"
base64ct = "1"

subtle = "2.0.0"

# For openssl errors
openssl = { version = "0.10.70", optional = true }
