[package]
name = "rtp"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
thiserror = "1"
rand = "0.8"
once_cell = "1"
# SRTP uses aes, which we could find pure rust implemetations for,
# however since DTLS requires openssl, we chose to use just openssl
# instead of relying on multiple TLS libraries.
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "^0.9"
# if we moved IDs geneartion to a "util" subcrate, serde dep would move out too
serde = "1"
#
dtls = { path = "../dtls" }
net = { path = "../net" }

[target.'cfg(fuzzing)'.dev-dependencies]
fuzzcheck = "0.12"
serde = { version = "1.0", features = ["derive"] }
