[package]
name = "str0m-rtp"
version = "0.0.1"
edition = "2021"

[dependencies]
tracing = "0.1"
thiserror = "1"
rand = "0.8"
once_cell = "1"
# SRTP uses aes, which we could find pure rust implemetations for,
# however since DTLS requires openssl, we chose to use just openssl
# instead of relying on multiple TLS libraries.
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "^0.9"
# if we moved IDs geneartion to a "util" subcrate, serde dep would move out too
serde = { version = "1", features = ["derive"] }
#
dtls = { path = "../dtls", package = "str0m-dtls", version = "0.0.1" }
net = { path = "../net", package = "str0m-net", version = "0.0.1" }
