[package]
name = "sctp-proto"
version = "0.1.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "State machine for the SCTP protocol"

[dependencies]
arbitrary = { version = "1.0.1", features = ["derive"], optional = true }
bytes = "1"
fxhash = "0.2.1"
rand = "0.8"
slab = "0.4"
thiserror = "1"
tinyvec = { version = "1.1", features = ["alloc"] }
crc = "3.0"
tracing = "0.1"

[dev-dependencies]
assert_matches = "1.1"
hex-literal = "0.3.0"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
lazy_static = "1"
