[package]
name = "str0m-sdp"
version = "0.0.1"
edition = "2021"

[dependencies]
tracing = "0.1"
thiserror = "1"
serde = "1"
combine = "4"
#
dtls = { path = "../dtls", package = "str0m-dtls", version = "0.0.1" }
ice = { path = "../ice", package = "str0m-ice", version = "0.0.1" }
rtp = { path = "../rtp", package = "str0m-rtp", version = "0.0.1" }

[dev-dependencies]
serde_json = "1.0"
