[package]
name = "str0m"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
tracing = "0.1"
rand = "0.8"

bitvec = "1"
once_cell = "1"

dtls = { path = "../dtls" }
ice = { path = "../ice" }
net_ = { package = "net", path = "../net" }
rtp = { path = "../rtp" }
sdp = { path = "../sdp" }
packet = { path = "../packet" }
sctp = { path = "../sctp" }

[dev-dependencies]
rouille = { version = "3.5.0", features = ["ssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3"
tokio = { version = "1.23", features = ["full"] }
poem = { version="1.3", features = ["rustls"] }
systemstat = "0.2.2"