[package]
name = "str0m"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
tracing = "0.1"
rand = "0.8"
once_cell = "1"
serde = "1"
#
dtls = { path = "../dtls", package = "str0m-dtls", version = "0.0.1" }
ice = { path = "../ice", package = "str0m-ice", version = "0.0.1" }
net_ = { path = "../net", package = "str0m-net", pversion = "0.0.1" }
rtp_ = { path = "../rtp", package = "str0m-rtp", version = "0.0.1" }
sdp = { path = "../sdp", package = "str0m-sdp", version = "0.0.1" }
packet = { path = "../packet", package = "str0m-packet", version = "0.0.1" }
sctp = { path = "../sctp", package = "str0m-sctp", version = "0.0.1" }

[dev-dependencies]
rouille = { version = "3.5.0", features = ["ssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
systemstat = "0.2.2"
