[package]
name = "str0m"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
tracing = "0.1"
rand = "0.8"
once_cell = "1"
serde = "1"
sctp-proto = "0.1.3"
combine = "4"
# Sadly no DTLS support in rustls.
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "^0.9"
# STUN
hmac = "0.12"
crc = "3"

# asm feature breaks on windows, but it is much faster than openssl
[target.'cfg(unix)'.dependencies]
sha-1 = { version = "0.10", features = ["asm"] }

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "^0.9"

[dev-dependencies]
rouille = { version = "3.5.0", features = ["ssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
systemstat = "0.2.2"
