# Package to isolate unsafe APIs used for the Str0m Windows Cryptography feature.

[package]
name = "str0m-wincrypto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["webrtc", "streaming", "video", "audio", "media"]
categories = ["web-programming", "multimedia", "network-programming"]
repository = "https://github.com/algesten/str0m"
readme = "README.md"
description = "Supporting crate for str0m"

[dependencies]
thiserror = { version = "1.0.38" }
tracing = "0.1.37"
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Credentials",
    "Win32_System_Rpc",
] }
