[package]
name = "str0m-proto"
version = "0.4.0"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "Internal crate for str0m. Not intended for direct use."
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/str0m"
readme = "README.md"
edition = "2024"

# MSRV
rust-version = "1.85.0"

[features]
default = ["dtls"]
dtls = ["dep:dimpl"]
openssl = ["dep:openssl"]
pii = []

# When we are running in test mode
_internal_test_exports = []

[dependencies]
# DTLS made for str0m (optional dependency for types and traits)
dimpl = { workspace = true, optional = true }

time.workspace = true
base64ct.workspace = true
subtle.workspace = true
fastrand.workspace = true
serde.workspace = true

# For openssl errors
openssl = { workspace = true, optional = true }
