[package]
name = "str0m-android-crypto"
version = "0.1.0"
description = "Android JNI cryptographic backend for str0m WebRTC"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/str0m"
readme = "README.md"

# MSRV
rust-version = "1.81.0"

[dependencies]
str0m-proto = { version = "0.1.2", path = "../../proto" }
dimpl = { version = "0.3.0", default-features = false }
# Pin time to avoid time-core 0.1.8+ which requires edition 2024 (rustc 1.85+)
time = ">=0.3, <0.3.37"

# JNI bindings for Android
jni = "0.21"

# For one-time JVM initialization
once_cell = "1.19"

# For byte array casting in JNI
bytemuck = "1.14"

# Constant-time comparison for crypto
subtle = "2.0.0"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"

[lints.clippy]
as_ptr_cast_mut = "deny"
branches_sharing_code = "deny"
clear_with_drain = "deny"
collection_is_never_read = "deny"
debug_assert_with_mut_call = "deny"
derive_partial_eq_without_eq = "deny"
equatable_if_let = "deny"
fallible_impl_from = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
manual_ok_or = "deny"
needless_option_take = "deny"
needless_pass_by_ref_mut = "deny"
no_effect_underscore_binding = "deny"
obfuscated_if_else = "deny"
option_option = "deny"
ptr_as_ptr = "deny"
read_zero_byte_vec = "deny"
redundant_closure = "deny"
redundant_else = "deny"
redundant_feature_names = "deny"
semicolon_if_nothing_returned = "deny"
trailing_empty_array = "deny"
type_repetition_in_bounds = "deny"
uninhabited_references = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_struct_initialization = "deny"
unnested_or_patterns = "deny"
unused_peekable = "deny"
unused_rounding = "deny"
useless_let_if_seq = "deny"
