[package]
name = "str0m-aws-lc-rs"
version = "0.1.2"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "aws-lc-rs backend for str0m WebRTC"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/str0m"
readme = "README.md"
edition = "2021"

# MSRV
rust-version = "1.81.0"

[dependencies]
str0m-proto = { version = "0.1.2", path = "../../proto" }
aws-lc-rs = { version = "1", default-features = false, features = ["aws-lc-sys", "prebuilt-nasm"] }
# dimpl = { path = "../../dimpl", default-features = false, features = ["aws-lc-rs", "rcgen"] }
dimpl.git = "https://github.com/algesten/dimpl"
dimpl.rev = "5bb5047289d59faaf2b7d0c3dcde25c80cdd2ff0"
dimpl.default-features = false
dimpl.features = ["aws-lc-rs", "rcgen"]
# Pin time to avoid time-core 0.1.8+ which requires edition 2024 (rustc 1.85+)
time = ">=0.3, <0.3.37"
