[package]
name = "str0m-aws-lc-rs"
version = "0.1.2"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "aws-lc-rs backend for str0m WebRTC"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/str0m"
readme = "README.md"
edition = "2024"

# MSRV
rust-version = "1.85.0"

[dependencies]
str0m-proto = { version = "0.1.2", path = "../../proto" }
aws-lc-rs = { version = "1", default-features = false, features = ["aws-lc-sys", "prebuilt-nasm"] }
dimpl = { version = "0.4.0", default-features = false, features = ["aws-lc-rs", "rcgen"] }
time = "0.3"
